prohibit export requests from alternate route
